--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".RegisterActivity">
     <LinearLayout
+        android:layout_marginTop="48dp"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -54,26 +55,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:endIconMode="clear_text"
-            android:hint="Phone"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/reg_phone"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                app:errorEnabled="true" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
             android:hint="Email"
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
@@ -93,7 +74,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
+            app:endIconMode="password_toggle"
             android:hint="Password"
             android:layout_marginTop="16dp"
             android:layout_marginStart="32dp"
@@ -106,8 +87,115 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 app:errorEnabled="true" />
-
         </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:endIconMode="password_toggle"
+            android:hint="Confirm Password"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/reg_confirm_Password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                app:errorEnabled="true" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    >
+    <TextView
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Please Select categories" />
+
+</LinearLayout>
+<!-- Categories-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cb_lifestyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="LifeStyle" />
+                <CheckBox
+                    android:id="@+id/cb_literature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Literature" />
+                <CheckBox
+                    android:id="@+id/cb_coding"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Coding" />
+                <CheckBox
+                    android:id="@+id/cb_movies"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Movies" />
+                <CheckBox
+                    android:id="@+id/cb_booze"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Booze" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cb_cartoon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Cartoons" />
+                <CheckBox
+                    android:id="@+id/cb_cricket"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Cricket" />
+                <CheckBox
+                    android:id="@+id/cb_Politics"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Politics" />
+                <CheckBox
+                    android:id="@+id/cb_web"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Web / TV series" />
+                <CheckBox
+                    android:id="@+id/cb_food"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Food" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
 
         <Button
             android:id="@+id/reg_btn"
@@ -126,6 +214,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="16dp"
+            android:paddingBottom="8dp"
             android:layout_marginEnd="32dp"
             android:gravity="end">
             <TextView
