--- a/app/src/main/res/layout/nav_bar_header.xml
+++ b/app/src/main/res/layout/nav_bar_header.xml
@@ -16,7 +16,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="16dp"
-            android:src="@color/colorPrimaryDark"
+            android:src="@drawable/avatar"
             />
         <LinearLayout
             android:layout_margin="8dp"
@@ -31,7 +31,7 @@
                 android:text="Welcome"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorBlack"
+                android:textColor="@color/colorWhite"
                 />
             <TextView
                 android:id="@+id/header_name"
@@ -41,19 +41,15 @@
                 android:layout_height="wrap_content"
                 android:text="Guest"
                 android:textSize="16sp"
-                android:textColor="@color/colorBlack"
+                android:textColor="@color/colorWhite"
                 />
-
-<!--            <TextView-->
-<!--                android:id="@+id/header_email"-->
-<!--                android:layout_margin="2dp"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="64dp"-->
-<!--                android:text="Email Address"-->
-<!--                android:textSize="16sp"-->
-<!--                android:textColor="@color/colorBlack"-->
-<!--                />-->
 
         </LinearLayout>
     </LinearLayout>
+
+
+
+
+
+
 </LinearLayout>
