--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -7,6 +7,8 @@
                 android:id="@+id/nav_my_profile" />
             <item android:title="category"
                 android:id="@+id/nav_my_cart" />
+            <item android:title="Notifications"
+                android:id="@+id/nav_my_notifications" />
             <item android:title="Login"
                 android:id="@+id/nav_login" />
 
