--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0EA1B6</color>
+    <color name="colorPrimary">#B92B27</color>
     <color name="colorPrimaryDark">#001F33</color>
     <color name="colorAccent">#E9E9E9</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="quoraColor">#B92B27</color>
+    <color name="defaultColor">#808080</color>
 
 </resources>
