--- a/app/src/main/res/layout/answer_layout.xml
+++ b/app/src/main/res/layout/answer_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorWhite"
-    android:layout_marginBottom="4dp">
-
+    android:layout_height="match_parent"
+    android:layout_marginBottom="8dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -64,27 +63,44 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/post_answer_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:maxLines="6"
             android:padding="8dp"
             android:textSize="16sp"
-            android:text="For fields like Embedded Systems Programming, Machine Learning, Robotics, Information Security I will suggest Python. Google, Youtube, Instagram amongst others are built on python (Django Framework). Java too works in these fields, but python’s readability, associated with the ease in debugging code written in it (python), added to the relative ease associated in learning it makes it king. Am a self taught python and C++ programmer (more specified in Network Programming and Competitive Programming (Data Structures and Algorithms)). I personally am learning Java now only because its a kind o"
-            />
+            android:text="For fields like Embedded Systems Programming, Machine Learning, Robotics, Information Security I will suggest Python. Google, Youtube, Instagram amongst others are built on python (Django Framework). Java too works in these fields, but python’s readability, associated with the ease in debugging code written in it (python), added to the relative ease associated in learning it makes it king. Am a self taught python and C++ programmer (more specified in Network Programming and Competitive Programming (Data Structures and Algorithms)). I personally am learning Java now only because its a kind o" />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/quoraColor"
+    android:gravity="end">
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="8dp"
+        android:src="@drawable/like"
+        android:layout_marginEnd="8dp"
+        />
+    <ImageView
+        android:layout_width="40dp"
+        android:padding="8dp"
+        android:layout_height="40dp"
+        android:src="@drawable/comment"
+        android:layout_marginEnd="16dp" />
 
+
+</LinearLayout>
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:backgroundTint="@color/colorBlack"
         />
-
-
 
 </LinearLayout>
