--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -9,6 +9,8 @@
                 android:id="@+id/nav_my_cart" />
             <item android:title="Notifications"
                 android:id="@+id/nav_my_notifications" />
+            <item android:title="Follow Request"
+                android:id="@+id/nav_follow" />
             <item android:title="Login"
                 android:id="@+id/nav_login" />
 
