--- a/app/src/main/res/layout/activity_user_pref.xml
+++ b/app/src/main/res/layout/activity_user_pref.xml
@@ -13,47 +13,148 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Please choose your account preference"
             android:textColor="@color/colorBlack"
             android:gravity="center"
+            android:layout_marginBottom="32dp"
             android:textSize="18sp" />
-
-
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             <RadioGroup
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:gravity="center">
+                android:gravity="center"
+                android:layout_marginBottom="32dp"
+                android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/rb_public"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Public"
-                    android:textSize="16sp"
                     android:textColor="@color/colorBlack"
-                    />
+                    android:textSize="16sp" />
+
                 <RadioButton
                     android:id="@+id/rb_private"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Private"
                     android:layout_marginStart="32dp"
-                    android:textSize="16sp"
-                    android:textColor="@color/colorBlack" />
+                    android:text="Private"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="16sp" />
             </RadioGroup>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Please select your catogry"
+                    android:textSize="18sp"
+                    android:gravity="center"
+                    android:textColor="@color/colorBlack"
+                    />
 
-<Button
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="Register"
-    android:layout_marginTop="16dp"
-    android:layout_marginStart="32dp"
-    android:layout_marginEnd="32dp"
-    />
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            android:gravity="center">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cb_lifestyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="LifeStyle" />
+                <CheckBox
+                    android:id="@+id/cb_literature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Literature" />
+                <CheckBox
+                    android:id="@+id/cb_coding"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Coding" />
+                <CheckBox
+                    android:id="@+id/cb_movies"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Movies" />
+                <CheckBox
+                    android:id="@+id/cb_booze"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Booze" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+                <CheckBox
+                    android:id="@+id/cb_cartoon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Cartoons" />
+                <CheckBox
+                    android:id="@+id/cb_cricket"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Cricket" />
+                <CheckBox
+                    android:id="@+id/cb_Politics"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Politics" />
+                <CheckBox
+                    android:id="@+id/cb_web"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Web / TV series" />
+                <CheckBox
+                    android:id="@+id/cb_food"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Food" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+        <Button
+            android:id="@+id/finalRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Register"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            />
     </LinearLayout>
 
 </LinearLayout>
