--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,17 +33,20 @@
                 android:layout_height="wrap_content"
                 android:theme="@style/ToolbarTheme" >
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_marginStart="150dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:gravity="end">
                     <ImageView
+                        android:id="@+id/home_notification_btn_img"
                         android:layout_marginEnd="16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/notification"
                         />
                     <ImageView
+                        android:id="@+id/home_add_question_btn_img"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/add" />
@@ -78,8 +81,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/top_question_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"/>
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
 
