--- a/app/src/main/res/layout/friend_request_layout.xml
+++ b/app/src/main/res/layout/friend_request_layout.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorWhite"
+    android:layout_marginTop="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp">
+        android:padding="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/friend_request_profile_img"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:src="@drawable/avatar" />
@@ -22,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/friend_request_profile_name"
                     android:layout_marginStart="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -52,12 +56,14 @@
             android:gravity="center">
 
             <Button
+                android:id="@+id/friend_request_accept_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Accept"
                 android:layout_margin="8dp"
                 />
             <Button
+                android:id="@+id/friend_request_decline_btn"
                 android:layout_margin="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
