--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -6,7 +6,7 @@
             <item android:title="My Profile"
                 android:id="@+id/nav_my_profile" />
             <item android:title="category"
-                android:id="@+id/nav_my_cart" />
+                android:id="@+id/nav_cat" />
             <item android:title="Notifications"
                 android:id="@+id/nav_my_notifications" />
             <item android:title="Follow Request"
