ads,login,registration,fcm tokken

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,14 +72,16 @@
 
         </com.google.android.material.appbar.AppBarLayout>
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/top_question_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"/>
+
         </LinearLayout>
 
 
