--- a/app/src/main/res/layout/activity_user_pref.xml
+++ b/app/src/main/res/layout/activity_user_pref.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <RadioGroup
-
+                android:id="@+id/rg_pref"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -39,6 +39,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Public"
+                    android:checked="true"
                     android:textColor="@color/colorBlack"
                     android:textSize="16sp" />
 
