--- a/app/src/main/res/layout/activity_my_profile.xml
+++ b/app/src/main/res/layout/activity_my_profile.xml
@@ -69,7 +69,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Level : "
+                        android:text="Role:  "
                         android:textColor="@color/colorWhite"
                         android:textSize="16sp" />
                     <TextView
